package com.example.search_eat_pis.Vista;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.example.search_eat_pis.R;

public class InformacionActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_informacion);
    }
}